cmake_minimum_required(VERSION 2.8)
PROJECT(skip_map)

SET(CMAKE_CXX_COMPILER clang++)

#TODO : No frame-pointer in release build
SET(CXX_COMPILE_FLAGS "-Wall -pthread -O3 -fno-omit-frame-pointer -Wextra -Wfatal-errors -pedantic --std=c++17 -ggdb3")
SET(CMAKE_CXX_FLAGS  "${CMAKE_CXX_FLAGS} ${CXX_COMPILE_FLAGS}" )
SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)

SET(TEST_SOURCES src/tests.cpp)
SET(BENCH_SOURCES src/bench.cpp)
SET(CPU_EVENT_COLLECTION_SOURCES src/events.cpp)

FIND_PACKAGE(GTest REQUIRED)
FIND_PACKAGE (Threads REQUIRED)
FIND_PACKAGE(benchmark REQUIRED)

INCLUDE_DIRECTORIES(${benchmark_INCLUDE_DIR} ${GTEST_INCLUDE_DIRS} )

ADD_EXECUTABLE(events ${CPU_EVENT_COLLECTION_SOURCES})
TARGET_LINK_LIBRARIES(events benchmark)

ADD_EXECUTABLE(bench ${BENCH_SOURCES})
TARGET_LINK_LIBRARIES(bench benchmark)

ADD_EXECUTABLE(tests ${TEST_SOURCES})
TARGET_LINK_LIBRARIES(tests ${GTEST_BOTH_LIBRARIES} ${CMAKE_THREAD_LIBS_INIT} )
